--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,25 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB= public_db
+      - POSTGRES_DB=public_db
       - POSTGRES_USER=public_user
       - POSTGRES_PASSWORD=publicN3xt!
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     #  - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+  mongo:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: public_user
+      MONGO_INITDB_ROOT_PASSWORD: publicN3xt!
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
 
+volumes:
+  postgres_data:
+  mongo_data:
   # app:
   #   build:
   #     context: .
@@ -25,6 +37,3 @@ services:
   #     - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/public_db
   #     - SPRING_DATASOURCE_USERNAME=public_user
   #     - SPRING_DATASOURCE_PASSWORD=publicN3xt!
-
-volumes:
-  postgres-data:
