--- a/order-processing-log-service/src/main/resources/application.properties
+++ b/order-processing-log-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Server Configuration
 server.port=8090
 spring.data.mongodb.uri=mongodb://public_user:publicN3xt!@localhost:27017/order_logs?authSource=admin
+logging.level.org.springframework.data.mongodb=DEBUG
 springdoc.swagger-ui.enabled=true
 
