--- a/order-processing-log-service/pom.xml
+++ b/order-processing-log-service/pom.xml
@@ -9,7 +9,12 @@
 
     <artifactId>order-processing-log-service</artifactId>
     <name>Order Processing Log Service</name>
-
+    <properties>
+        <java.version>1.8</java.version>
+        <start-class>org.example.logservice.OrderProcessingLogApplication</start-class>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
