--- a/order-management-service/src/main/resources/application.properties
+++ b/order-management-service/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # Spring Boot Application Properties
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/public_db
 spring.datasource.username=public_user
 spring.datasource.password=publicN3xt!
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -19,6 +18,12 @@ server.port=8080
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-springdoc.swagger-ui.enabled=true
+logging.level.org.example.service=DEBUG
 
-log.service.url=http://localhost:8090/logs
+# Log Service Configuration
+log.service.url=http://order-processing-log-service:8090/logs
+
+# Docker Profile Configuration
+---
+spring.config.activate.on-profile=docker
+spring.datasource.url=jdbc:postgresql://postgres:5432/public_db
