--- a/order-processing-log-service/src/main/resources/application.properties
+++ b/order-processing-log-service/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 # Server Configuration
 server.port=8090
-spring.data.mongodb.uri=mongodb://public_user:publicN3xt!@localhost:27017/order_logs?authSource=admin
+
+# MongoDB Configuration with separate properties
+spring.data.mongodb.host=mongo
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=order_logs
+spring.data.mongodb.username=public_user
+spring.data.mongodb.password=publicN3xt!
+spring.data.mongodb.authentication-database=admin
+
+# Logging
 logging.level.org.springframework.data.mongodb=DEBUG
 springdoc.swagger-ui.enabled=true
-
